# bazel-monorepo

./: .bazelignore  .bazelrc  .gitignore  README.md  WORKSPACE.bazel
.github/workflows/: main.yml
.ijwb/: .bazelproject
src/go/: go_deps.bzl
src/go/go_hello_world/: BUILD.bazel  hello_world_test.go
src/go/go_web/: BUILD.bazel  main.go
src/javascript/pnpm_monorepo/: package.json
src/javascript/pnpm_monorepo/apps/vite-app/: .env  BUILD.bazel  package.json  postcss.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
src/javascript/pnpm_monorepo/apps/vite-app/src/: App.tsx  BUILD.bazel  index.css
src/javascript/svelte_app/: package.json  pnpm-lock.yaml
src/projectB/: BUILD.bazel
src/python/: requirements_lock.txt
src/python/calculator/: BUILD.bazel  calculator_test.py
src/python/flaskapp/: BUILD.bazel  main.py
